--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,7 @@ nav {
   float: left; /* 가로 배치 */
 }
 
+/* 버튼 */
 button {
   position : absolute; /* 부모 slideShow따라 다님 */
   height: 100%; /* 300px */
@@ -156,7 +157,7 @@ button {
   background-color: transparent; /* 투명한 배경 지정 */
   color : #000;
   font-weight: 800;
-  font-size: 20px;
+  font-size: 24px;
   opacity: 0.5; /* 화살표 반투명하게 지정 */
 
 }
@@ -189,22 +190,115 @@ button:focus {
 #content {
   width: 100%;
   height: 300px;
-  background-color:rebeccapurple;
+  margin-top: 20px;
+  
 }
 
 #tabMenu {
   float : left;
   width: 600px;
   height: 100%;
-  background-color: pink;
+  margin-top: 10px; /* 탭 메뉴 위쪽 여백 두기 */
+  
 }
+
+#tabMenu input[type="radio"] { /* css attribute 선택자 */
+  display: none; /* 라디오버튼 숨기기 -> 클릭이벤트 걸꺼야 */
+}
+
+#tabMenu label { /* 탭 메뉴 스타일  */
+  display: inline-block; /* 탭 메뉴 가로 배치 */
+  margin : 0 0;
+  padding : 15px 25px;
+  font-weight : 600; /* 폰트 굵기 */
+  text-align : center; /* block요소 text 정렬시 사용 */
+  color: #aaa;
+  border: 1px solid transparent;
+}
+
+#tabMenu label:hover {
+  color : #222;
+  cursor: pointer;
+
+}
+
+#tabMenu input:checked + label { /* 활성화 된 탭 제목 스타일 */
+  color: #b00;
+  border: 1px solid #ddd;
+  background-color: #eee;
+}
+
+.tabContent {
+  display: none;
+  padding : 20px 0 0;
+  border-top: 1px solid #ddd
+  
+}
+
+.tabContent h2 {
+  display: none;
+}
+
+#notice ul li {
+  font-size: 16px;
+  line-height: 2.5;
+}
+
+#gallery ul li {
+  display: inline; /* 이미지 가로 배치 */
+}
+
+/* 내용 연결시켜주기 */
+#tab1:checked ~ #notice,
+#tab2:checked ~ #gallery {
+  display: block;
+}
+
+
+/*  퀵 링크 */
 
 #links {
   float: right;
   width: 600px;
   height: 100%;
-  background-color: skyblue;
 }
+
+#links ul {
+  padding: 0;
+  overflow: hidden;
+  margin-top: 15px;
+}
+
+#links ul li {
+  float : left; /* 가로 배치 */
+  width: 33%; /* 3개 공평하게 영역 나눠주기 */
+  text-align: center; /* 가운데 정렬 */
+  margin: 10px 0;
+}
+
+#links ul li a span { /* 이미지파일 */
+  display: block;
+  margin: 0 auto; /* 가운데배치 */
+  width: 150px;
+  height: 150px;
+  border-radius: 100%; /* 테두리 둥굴게 */
+  border: 1px solid #ddd;
+  line-height: 150px; /* 수직으로 중간에 오게 */
+}
+
+/* 이미지 연결하기 */
+#quick-icon1 {
+  background-image: url('../images/icon-1.jpg');
+}
+
+#quick-icon2 {
+  background-image: url('../images/icon-2.jpg');
+}
+
+#quick-icon3 {
+  background-image: url('../images/icon-3.jpg');
+}
+
 
 /* ------------------ 푸터  --------------------------*/
 
@@ -212,7 +306,55 @@ button:focus {
 footer {
   width: 100%;
   height: 100px;
-  background-color: gray;
   clear : both; 
+  border-top : 2px solid #222; /* 상단 테두리 (가로선 추가) */
 }
 
+#bottomMenu {
+  width: 100%; /* 부모 footer -> container 크기받음 즉, 1200px */
+  height: 20px;
+  position: relative;
+}
+
+#bottomMenu ul {
+  margin-top: 15px;
+  
+}
+
+#bottomMenu ul li {
+  float: left; /* 가로 배치 */
+  padding : 5px 20px;
+  border-right : 1px solid #ddd; /* 오른쪽에 세로선 */
+}
+
+#bottomMenu ul li:last-child {
+  border-right : none; /* 마지막 요소는 오른쪽 세로선 없음 */
+}
+
+#bottomMenu ul li a, #bottomMenu ul li a:visited {
+  font-size: 15px;
+  color: #666;
+}
+
+
+#sns {
+  position : absolute; /* sns 절대위치하려면 부모(bottomMenu)는 relative */
+  right: 0; /* 오른쪽 끝으로 붙이기 */
+}
+
+/* #bottomMenu ul li 에서 실선이 sns에도 붙엇으므로 없애기 */
+#sns ul li {
+  border: none;
+  padding : 5px;
+}
+
+#company {
+  clear : left; /* float 속성 제거 */ 
+  margin-top: 25px;
+  margin-left: 20px;
+}
+
+p {
+  font-size: 14px;
+  color : #aaa;
+}
